--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
 
             <button class="w-full h-10 bg-button rounded-sm mb-2">Zaloguj się</button>
 
-            <p class="text-gray-400 text-sm">Potrzebujesz konta? <a class="link" href>Zarejestruj się</a></p>
+            <p class="text-gray-400 text-sm">Potrzebujesz konta? <a class="link" href="/register">Zarejestruj się</a></p>
         </form>
     </div>
 </body>
