--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,20 +12,20 @@
     <div class="w-11/12 mx-auto mt-28">
         <h1 class="font-semibold text-2xl mb-6 text-center">Załóż konto</h1>
 
-        <form method="POST">
-            <p class="text-gray-400 text-xs mb-1">ADRES E-MAIL</p>
-            <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="email" name="email"  required><br>
+        <form class="register--form" method="POST">
+            <label for="email" class="email--label text-gray-400 text-xs font-bold mb-1">ADRES E-MAIL</label>
+            <input id="email" class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="email" name="email" required><br>
 
-            <p class="text-gray-400 text-xs mb-1">NAZWA UŻYTKOWNIKA</p>
-            <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="username" minlength="3" maxlength="15" pattern="^[A-Za-z0-9_]{1,15}$" required><br>
+            <label for="username" class="username--label text-gray-400 text-xs font-bold mb-1">NAZWA UŻYTKOWNIKA</label>
+            <input id="username" class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="username" minlength="4" maxlength="15" pattern="^[A-Za-z0-9_]{1,15}$" required><br>
 
-            <p class="text-gray-400 text-xs mb-1" class="text-gray-300 text-xs mb-2">HASŁO</p>
-            <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="password" name="password" minlength="6" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required><br>
+            <label for="password" class="password--label text-gray-400 text-xs font-bold mb-1" class="text-gray-300 text-xs mb-2">HASŁO</label>
+            <input id="password" class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="password" name="password" minlength="6" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required><br>
 
-            <label for="birthday" class="text-gray-400 text-xs mb-1" for="birthday">DATA URODZENIA</label>
+            <label for="birthday" class="birthday--label text-gray-400 text-xs font-bold mb-1">DATA URODZENIA</label>
             <div id="birthday" class="flex">
                 <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayDay" list="days" placeholder="Dzień" min="1" max="31" required>
-                <!-- <datalist id="days">
+                <datalist id="days">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -57,11 +57,11 @@
                     <option value="29">29</option>
                     <option value="30">30</option>
                     <option value="31">31</option>
-                </datalist> -->
+                </datalist>
                 
-                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2 mx-1" type="text" name="birthdayMonth" list="days" placeholder="Miesiąc" min="1" max="12" required>
+                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2 mx-1" type="text" name="birthdayMonth" list="months" placeholder="Miesiąc" min="1" max="12" required>
 
-                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayYear" list="days" placeholder="Rok" min="1921" max="2018" required>
+                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayYear" list="years" placeholder="Rok" min="1921" max="2018" required>
             </div>
             
 
@@ -72,8 +72,98 @@
 
             <button class="w-full h-10 bg-button rounded-sm mb-2">Kontynuuj</button>
 
-            <p class="text-sm"><a class="link" href="">Masz już konto?</a></p><br>
+            <p class="text-sm"><a class="link" href="/login">Masz już konto?</a></p><br>
         </form>
     </div>
+
+    <script>
+        const formElem = document.querySelector('.register--form')
+        const emailLabel = document.querySelector('.email--label')
+        const usernameLabel = document.querySelector('.username--label')
+        const passwordLabel = document.querySelector('.password--label')
+        const birthdayLabel = document.querySelector('.birthday--label')
+
+        formElem.addEventListener('submit', async (e) => {
+            e.preventDefault()
+
+            const email = formElem.email.value
+            const username = formElem.username.value
+            const password = formElem.password.value
+            const birthdayDay = formElem.birthdayDay.value
+            const birthdayMonth = formElem.birthdayMonth.value
+            const birthdayYear = formElem.birthdayYear.value
+
+            // Reset label
+            // Email
+            emailLabel.textContent = "ADRES E-MAIL"
+            emailLabel.classList.remove("text-red-500")
+            emailLabel.classList.add("text-gray-400")
+            // Username
+            usernameLabel.textContent = "NAZWA UŻYTKOWNIKA"
+            usernameLabel.classList.remove("text-red-500")
+            usernameLabel.classList.add("text-gray-400")
+            // Password
+            passwordLabel.textContent = "Hasło"
+            passwordLabel.classList.remove("text-red-500")
+            passwordLabel.classList.add("text-gray-400")
+            // Birthday
+            birthdayLabel.textContent = "DATA URODZENIA"
+            birthdayLabel.classList.remove("text-red-500")
+            birthdayLabel.classList.add("text-gray-400")
+
+            try {
+                const res = await fetch('/register', {
+                    method: 'POST',
+                    body: JSON.stringify({ 
+                        email,
+                        username,
+                        password,
+                        birthdayDay,
+                        birthdayMonth,
+                        birthdayYear
+                    }),
+                    headers: { 'Content-Type': 'application/json' }
+                });
+
+                const data = await res.json()
+                console.log(data)
+                if (data.errors) {
+                    if (data.errors.email != '') {
+                        emailLabel.textContent = data.errors.email
+                        emailLabel.classList.remove("text-gray-400")
+                        emailLabel.classList.add("text-red-500")
+                    }
+                    if (data.errors.username != '') {
+                        usernameLabel.textContent = data.errors.username
+                        usernameLabel.classList.remove("text-gray-400")
+                        usernameLabel.classList.add("text-red-500")
+                    }
+                    if (data.errors.password != '') {
+                        passwordLabel.textContent = data.errors.password
+                        passwordLabel.classList.remove("text-gray-400")
+                        passwordLabel.classList.add("text-red-500")
+                    }
+                    if (data.errors.birthdayDay != '') {
+                        birthdayLabel.textContent = data.errors.birthdayDay
+                        birthdayLabel.classList.remove("text-gray-400")
+                        birthdayLabel.classList.add("text-red-500")
+                    }
+                    if (data.errors.birthdayMonth != '') {
+                        birthdayLabel.textContent = data.errors.birthdayMonth
+                        birthdayLabel.classList.remove("text-gray-400")
+                        birthdayLabel.classList.add("text-red-500")
+                    }
+                    if (data.errors.birthdayYear != '') {
+                        birthdayLabel.textContent = data.errors.birthdayYear
+                        birthdayLabel.classList.remove("text-gray-400")
+                        birthdayLabel.classList.add("text-red-500")
+                    }
+                }
+            } catch (err) {
+                console.log('error')
+                console.log(err)
+            }
+        })
+    </script>
 </body>
 </html>
