--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,16 @@
 .chat-messages:first-child{
     margin-bottom: 250px;
 }
+
+option {
+    background-color: black;
+    padding: 4px;
+    color: blue;
+    margin-bottom: 1px;
+     font-size: 18px;
+    cursor: pointer;
+}
+  
+option:hover,  .active{
+background-color: lightblue;
+}
