--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,18 +14,18 @@
 
         <form class="register--form" method="POST">
             <label for="email" class="email--label text-gray-400 text-xs font-bold mb-1">ADRES E-MAIL</label>
-            <input id="email" class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="email" name="email" required><br>
+            <input id="email" class="bg-secondary border border-gray-900 rounded w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="email" name="email" required><br>
 
             <label for="username" class="username--label text-gray-400 text-xs font-bold mb-1">NAZWA UŻYTKOWNIKA</label>
-            <input id="username" class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="username" minlength="4" maxlength="15" pattern="^[A-Za-z0-9_]{1,15}$" required><br>
+            <input id="username" class="bg-secondary border border-gray-900 rounded w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="username" minlength="4" maxlength="15" pattern="^[A-Za-z0-9_]{1,15}$" required><br>
 
             <label for="password" class="password--label text-gray-400 text-xs font-bold mb-1" class="text-gray-300 text-xs mb-2">HASŁO</label>
-            <input id="password" class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="password" name="password" minlength="6" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required><br>
+            <input id="password" class="bg-secondary border border-gray-900 rounded w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="password" name="password" minlength="6" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required><br>
 
             <label for="birthday" class="birthday--label text-gray-400 text-xs font-bold mb-1">DATA URODZENIA</label>
             <div id="birthday" class="flex">
-                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayDay" list="days" placeholder="Dzień" min="1" max="31" required>
-                <datalist id="days">
+                <input class="bg-secondary border border-gray-900 rounded w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayDay" list="days" placeholder="Dzień" min="1" max="31" autocomplete="off" required>
+                <datalist id="days" class="max-h-48 overflow-y-scroll rounded">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -59,9 +59,23 @@
                     <option value="31">31</option>
                 </datalist>
                 
-                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2 mx-1" type="text" name="birthdayMonth" list="months" placeholder="Miesiąc" min="1" max="12" required>
+                <input class="bg-secondary border border-gray-900 rounded w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2 mx-1" type="text" name="birthdayMonth" list="months" placeholder="Miesiąc" min="1" max="12" autocomplete="off" required>
+                <datalist id="months">
+                    <option value="styczeń">styczeń</option>
+                    <option value="luty">luty</option>
+                    <option value="marzec">marzec</option>
+                    <option value="kwiecień">kwiecień</option>
+                    <option value="maj">maj</option>
+                    <option value="czerwiec">czerwiec</option>
+                    <option value="lipiec">lipiec</option>
+                    <option value="sierpień">sierpień</option>
+                    <option value="wrzesień">wrzesień</option>
+                    <option value="październik">październik</option>
+                    <option value="listopad">listopad</option>
+                    <option value="grudzień">grudzień</option>
+                </datalist>
 
-                <input class="bg-secondary border border-gray-900 rounded-sm w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayYear" list="years" placeholder="Rok" min="1921" max="2018" required>
+                <input class="bg-secondary border border-gray-900 rounded w-full h-10 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500 px-2" type="text" name="birthdayYear" placeholder="Rok" min="1921" max="2018" autocomplete="off" required>
             </div>
             
 
@@ -70,7 +84,7 @@
                 <label for="statue" class="text-sm text-gray-500">Przeczytałem(-łam) i akceptuję <a class="link" href="">Warunki Korzystania z Usługi</a> oraz <a class="link" href=""><u>Politykę Prywatności</u></a> ChatCorda.</label>
             </div>
 
-            <button class="w-full h-10 bg-button rounded-sm mb-2">Kontynuuj</button>
+            <button class="w-full h-10 bg-button rounded mb-2">Kontynuuj</button>
 
             <p class="text-sm"><a class="link" href="/login">Masz już konto?</a></p><br>
         </form>
