--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.2.9 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.2.11 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -32413,8 +32413,12 @@ option {
   cursor: pointer;
 }
 
-option:hover,  .active{
+option:hover, .active{
   background-color: lightblue;
+}
+
+.chat-messages{
+  direction: rlt;
 }
 
 @media (min-width: 640px) {
