--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,18 @@ option:hover, .active{
 .chat-messages{
     direction: rlt;
 }
+
+.main-move-left {
+    transform: translateX(calc(-83.33%));
+}
+
+.main-move-left:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 0.5rem;
+}
