--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,15 +3,16 @@
 
 <%- include('./partials/head') %>
 
-<body class="bg-primary m-0 text-white font-sans h-screen">
-    <section>
+<body class="relative bg-vdark-gray m-0 text-white font-sans h-screen">
+    <%# Main panel %>
+    <section class="main-panel absolute z-50 transition-transform">
         <%# Channel info %>
-        <div class="flex items-center fixed bg-dark-gray p-4 w-screen">
+        <div class="flex items-center fixed bg-dark-gray p-4 w-screen rounded-t-lg">
             <%# Hamburger %>
             <button class="mr-4">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-              </svg>
+                    <path stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
             </button>
 
             <%# Channel type %>
@@ -27,13 +28,13 @@
 
 
         <%# Chat content %>
-        <main class="chat-messages w-screen h-screen pb-10 overflow-scroll">
+        <main class="chat-messages bg-primary w-screen h-screen pb-10 overflow-scroll rounded-lg">
             <div class="scroller-content flex flex-col justify-end min-h-full">
             </div>
         </main>
 
         <%# Send message container %>
-        <div class="fixed bg-primary bottom-0 w-screen py-2">
+        <div class="fixed bg-primary bottom-0 w-screen py-2 rounded-b-lg">
             <div class="flex justify-center items-center bg-vdark-gray rounded-full py-1 w-10/12 mx-auto">
                 <form class="chat--form flex justify-between  bg-vdark-gray rounded-full px-4 py-1 w-full mx-auto">
                     <input id="msg" class="bg-transparent outline-none w-11/12" type="text" placeholder="Napisz na kanał" autocomplete="off" required>
@@ -50,7 +51,67 @@
         </div>
     </section>
 
+    <%# Users list panel %>
+    <section class="users-list-panel absolute right-0 flex flex-col w-10/12 h-screen p-2 z-40">
+        <%# Channel info %>
+        <div class="flex items-center bg-dark-gray p-4 w-full rounded-t-lg">
+            <%# Channel type %>
+            <div class="mr-2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#babbc0">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 20l4-16m2 16l4-16M6 9h14M4 15h14" />
+                  </svg>
+            </div>
+
+            <%# Channel name %>
+            <p class="text-xl font-bold">główny</p>
+        </div>
+
+        <div class="users-list-active flex-auto bg-primary h-full p-2 rounded-b-lg">
+            <div>
+                <p class="ml-8 text-sm font-bold text-gray-200">DOSTĘPNY - 0</p>
+                <ul>
+                    <li>
+
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <p class="ml-8 text-sm font-bold text-gray-200">NIEDOSTĘPNY - 0</p>
+                <ul>
+                    <li>
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <script src='/socket.io/socket.io.js'></script>
     <script src='js/script.js'></script>
+    <script src='js/swiped-events.min.js'></script>
+    <script>
+        const mainPanelElem = document.querySelector('.main-panel')
+
+        let isSwipedLeft = false,
+            isSwipedRight = false;
+
+
+        document.addEventListener('swiped', function(e) {
+            // Swipe left
+            if (isSwipedLeft == false && isSwipedRight == false) {
+                document.addEventListener('swiped-left', function(e) {
+                    mainPanelElem.classList.add('main-move-left')
+                    isSwipedLeft = true
+                });
+            }
+            else if (isSwipedLeft == true && isSwipedRight == false) {
+                document.addEventListener('swiped-right', function(e) {
+                    mainPanelElem.classList.remove('main-move-left')
+                    isSwipedLeft = false
+                });
+            }
+        });
+    </script>
 </body>
 </html>
