--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,23 +7,32 @@
     <%# Main panel %>
     <section class="main-panel absolute z-50 transition-transform">
         <%# Channel info %>
-        <div class="flex items-center fixed bg-dark-gray p-4 w-screen rounded-t-lg">
-            <%# Hamburger %>
-            <button class="mr-4">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
+        <div class="flex items-center justify-between fixed bg-dark-gray p-4 w-screen rounded-t-lg">
+            <div class="flex items-center">
+                <%# Hamburger %>
+                <button class="mr-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                    </svg>
+                </button>
 
-            <%# Channel type %>
-            <div class="mr-2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#babbc0">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 20l4-16m2 16l4-16M6 9h14M4 15h14" />
-                  </svg>
+                <%# Channel type %>
+                <div class="mr-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#babbc0">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 20l4-16m2 16l4-16M6 9h14M4 15h14" />
+                    </svg>
+                </div>
+
+                <%# Channel name %>
+                <p class="text-xl font-bold">główny</p>
             </div>
 
-            <%# Channel name %>
-            <p class="text-xl font-bold">główny</p>
+            <%# Users list %>
+            <div class="right-0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M9 6a3 3 0 11-6 0 3 3 0 016 0zM17 6a3 3 0 11-6 0 3 3 0 016 0zM12.93 17c.046-.327.07-.66.07-1a6.97 6.97 0 00-1.5-4.33A5 5 0 0119 16v1h-6.07zM6 11a5 5 0 015 5v1H1v-1a5 5 0 015-5z" />
+                </svg>
+            </div>
         </div>
 
 
