--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.2.12 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.2.14 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -11729,94 +11729,70 @@ video {
 }
 
 .divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-x-reverse: 0;
   border-right-width: calc(0px * var(--tw-divide-x-reverse));
   border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
 .divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-x-reverse: 0;
   border-right-width: calc(2px * var(--tw-divide-x-reverse));
   border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
 .divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-x-reverse: 0;
   border-right-width: calc(4px * var(--tw-divide-x-reverse));
   border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
 .divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-x-reverse: 0;
   border-right-width: calc(8px * var(--tw-divide-x-reverse));
   border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
 .divide-x > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-x-reverse: 0;
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
   border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
 .divide-y-0 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-y-reverse: 0;
   border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
 }
 
 .divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-y-reverse: 0;
   border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
 }
 
 .divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-y-reverse: 0;
   border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
 }
 
 .divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-y-reverse: 0;
   border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
 .divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-y-reverse: 1;
 }
 
 .divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
-  @defaults border-width {
-  }
   --tw-divide-x-reverse: 1;
 }
 
@@ -32475,18 +32451,49 @@ option:hover, .active{
 }
 
 .main-move-left {
+  opacity: 1;
   transform: translateX(calc(-83.33%));
+  transition: all ease-in-out .2s;
 }
 
-.main-move-left:after {
-  content: '';
+.main-panel-bg-layer {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  z-index: 50;
+  opacity: 0;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 0.5rem;
+  transition: opacity ease-in-out .2s;
+  pointer-events: none;
+}
+
+/* Scrollbar */
+
+/* width */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media (min-width: 640px) {
@@ -43554,94 +43561,70 @@ option:hover, .active{
   }
 
   .sm\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
     border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .sm\:divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(2px * var(--tw-divide-x-reverse));
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .sm\:divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(4px * var(--tw-divide-x-reverse));
     border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .sm\:divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(8px * var(--tw-divide-x-reverse));
     border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .sm\:divide-x > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
     border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .sm\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
   }
 
   .sm\:divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
   }
 
   .sm\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
   }
 
   .sm\:divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
   }
 
   .sm\:divide-y > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
   }
 
   .sm\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 1;
   }
 
   .sm\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 1;
   }
 
@@ -74977,94 +74960,70 @@ option:hover, .active{
   }
 
   .md\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
     border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .md\:divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(2px * var(--tw-divide-x-reverse));
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .md\:divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(4px * var(--tw-divide-x-reverse));
     border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .md\:divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(8px * var(--tw-divide-x-reverse));
     border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .md\:divide-x > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
     border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .md\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
   }
 
   .md\:divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
   }
 
   .md\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
   }
 
   .md\:divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
   }
 
   .md\:divide-y > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
   }
 
   .md\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 1;
   }
 
   .md\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 1;
   }
 
@@ -106400,94 +106359,70 @@ option:hover, .active{
   }
 
   .lg\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
     border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .lg\:divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(2px * var(--tw-divide-x-reverse));
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .lg\:divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(4px * var(--tw-divide-x-reverse));
     border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .lg\:divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(8px * var(--tw-divide-x-reverse));
     border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .lg\:divide-x > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
     border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .lg\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
   }
 
   .lg\:divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
   }
 
   .lg\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
   }
 
   .lg\:divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
   }
 
   .lg\:divide-y > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
   }
 
   .lg\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 1;
   }
 
   .lg\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 1;
   }
 
@@ -137823,94 +137758,70 @@ option:hover, .active{
   }
 
   .xl\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
     border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .xl\:divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(2px * var(--tw-divide-x-reverse));
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .xl\:divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(4px * var(--tw-divide-x-reverse));
     border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .xl\:divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(8px * var(--tw-divide-x-reverse));
     border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .xl\:divide-x > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
     border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .xl\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
   }
 
   .xl\:divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
   }
 
   .xl\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
   }
 
   .xl\:divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
   }
 
   .xl\:divide-y > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
   }
 
   .xl\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 1;
   }
 
   .xl\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 1;
   }
 
@@ -169246,94 +169157,70 @@ option:hover, .active{
   }
 
   .\32xl\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
     border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .\32xl\:divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(2px * var(--tw-divide-x-reverse));
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .\32xl\:divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(4px * var(--tw-divide-x-reverse));
     border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .\32xl\:divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(8px * var(--tw-divide-x-reverse));
     border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .\32xl\:divide-x > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
     border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
   .\32xl\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
   }
 
   .\32xl\:divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
   }
 
   .\32xl\:divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
   }
 
   .\32xl\:divide-y-8 > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(8px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(8px * var(--tw-divide-y-reverse));
   }
 
   .\32xl\:divide-y > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
   }
 
   .\32xl\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-y-reverse: 1;
   }
 
   .\32xl\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
-    @defaults border-width {
-    }
     --tw-divide-x-reverse: 1;
   }
 
@@ -189602,4 +189489,4 @@ option:hover, .active{
   .\32xl\:ease-in-out {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
+} 
