--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    
+    overflow: hidden;
+}
+
 .link{
     color: #4baeee;
 }
@@ -39,7 +44,13 @@ option:hover, .active{
 
 .main-move-left {
     opacity: 1;
-    transform: translateX(calc(-83.33%));
+    transform: translateX(-83.33%);
+    transition: all ease-in-out .2s;
+}
+
+.main-move-right {
+    opacity: 1;
+    transform: translateX(72px);
     transition: all ease-in-out .2s;
 }
 
@@ -51,10 +62,30 @@ option:hover, .active{
     width: 100vw;
     z-index: 50;
     opacity: 0;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.15);
     border-radius: 0.5rem;
     transition: opacity ease-in-out .2s;
     pointer-events: none;
+}
+
+.curr-room {
+    border-radius: 15px !important;
+}
+
+.curr-room:after {
+    content: '';
+    position: absolute;
+    height: 32px;
+    width: 8px;
+    border-radius: 99px;
+    background-color: white;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -15px;
+}
+
+.menu {
+    transform: translateY(100vh);
 }
 
 /* Scrollbar */
