--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,8 +80,8 @@
 
         <div class="users-list-active flex-auto bg-primary h-full p-2 rounded-b-lg">
             <div>
-                <p class="ml-8 text-sm font-bold text-gray-200">DOSTĘPNY - <span class="active-users"></span></p>
-                <ul class="active-users-list">
+                <p class="ml-4 mb-4 text-sm font-bold text-gray-200">DOSTĘPNY – <span class="active-users"></span></p>
+                <ul class="active-users-list ml-4">
                 </ul>
             </div>
 
