--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
 
 
         <%# Chat content %>
-        <main class="flex-auto chat-messages bg-primary w-screen overflow-y-auto overflow-x-hidden">
+        <main class="flex-auto chat-messages bg-primary w-screen overflow-y-auto overflow-x-hidden scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-transparent">
             <div class="scroller-content flex flex-col justify-end min-h-full">
             </div>
         </main>
